# heddle-workspace

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  install.sh  pyproject.toml
agents/: INDEX.md  heddle-contract-reviewer.md  heddle-invariant-guard.md  mkdocs-doc-reviewer.md  pyproject-deps-reviewer.md
anchors/: AGENTIC-DEV.md  CONTRACT_MAP.md  INVARIANTS.md  PHILOSOPHY.md  WORKSPACE.md
docs/: AGENT_ADAPTERS.md  MACHINE_PROFILE.md  WORKSPACE_SYNC_DESIGN.md
hooks/: README.md  settings.template.json
skills/: INDEX.md
skills/cross-repo-pr/: SKILL.md
skills/heddle-new-worker/: SKILL.md
skills/heddle-orient/: SKILL.md
skills/heddle-preflight/: SKILL.md
src/heddle_workspace/: __init__.py  __main__.py  add.py  agent_adapters.py  cli.py  doctor.py  git.py  init.py  link.py  machine.py  manifest.py  rm.py  status.py  sync.py  wizard.py
templates/workspace-init/: AGENTS.md
tests/: test_agent_adapters.py  test_init.py  test_manifest.py
